--- a/AkiraConverter.conf
+++ b/AkiraConverter.conf
@@ -17,7 +17,7 @@ sample
 #cube:./input-samples:qm.cube,1,1,1
 #xyz:./input-samples:atoms.xyz,1,1,1
 akiratgz:./input-samples/sio2.tgz:out%03d,0,1,10
-akira:./input-samples/ascii:akr%03d,0,1,3
+#akira:./input-samples/ascii:akr%03d,0,1,3
 #akiratgz:./input-samples/ascii.tgz:akr%03d,0,1,1
 #akiratbz2:./input-samples/ascii.tbz2:akr%03d,0,1,1
 #akirabin:./input-samples/binary:bakr%03d,0,1,1,little
