--- a/AkiraConverter.conf
+++ b/AkiraConverter.conf
@@ -11,13 +11,13 @@ sample
 ###    akira, akiratgz, akiratbz2, akirabin, akirabintgz, akirabintbz2,
 ###    chgcar, cube, xyz, coord, xcrysden,
 
-xcrysden:./:out%03d.xsf,0,10,1
+#xcrysden:./:out%03d.xsf,0,10,1
 #chgcar:./input-samples/Si_diamond_band:CHGCAR,1,1,1
 #chgcar:./input-samples/SiO2-glass:CHGCAR,1,1,1
 #akira:./input-samples/voronoi/:v%02d,2,2,1
 #cube:./input-samples:qm.cube,1,1,1
 #xyz:./input-samples:atoms.xyz,1,1,1
-#akiratgz:./input-samples/sio2.tgz:out%03d,0,1,10
+akiratgz:./input-samples/sio2.tgz:out%03d,0,1,10
 #akira:./input-samples/ascii:akr%03d,0,1,3
 #akiratgz:./input-samples/ascii.tgz:akr%03d,0,1,1
 #akiratbz2:./input-samples/ascii.tbz2:akr%03d,0,1,1
