renew release ver.

--- a/converter/AkiraConverter.conf
+++ b/converter/AkiraConverter.conf
@@ -9,7 +9,7 @@ sample
 #file-format:path:filename,startFrame,endFrame,Increment
 ### file-formats are;
 ###    akira, akiratgz, akiratbz2, akirabin, akirabintgz, akirabintbz2,
-###    chgcar, cube, xyz, coord, xcrysden,
+###    chgcar, cube, xyz, coord, xcrysden, chem3d
 
 #xcrysden:./:out%03d.xsf,0,10,1
 #chgcar:./input-samples/Si_diamond_band:CHGCAR,1,1,1
@@ -31,7 +31,7 @@ akiratgz:./input-samples/sio2.tgz:out%03d,0,1,10
 ### create bonds?
 true
 ### bond info: tag1, tag2, length[your unit]
-1 2 1.7
+1 2 4
 
 ### cut x?, min[0:1], max[0:1]
 false 0.5 0.8
