--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!-- Last Modified <2011-08-24 21:23:40 by NAKAMURA Takahide> -->
+<!-- Last Modified <2011-08-25 14:44:04 by NAKAMURA Takahide> -->
 
   <project name="AKIRA" default="runall" basedir=".">
 
@@ -30,7 +30,6 @@
     <!-- set classpath -->
     <path id="libpath_ref">
       <pathelement path="." />
-      <pathelement path="./plugin" />
     </path>
     <path id="ant_libpath_ref">
       <pathelement path="${ant_lib}" />
@@ -80,16 +79,11 @@
     <target name="make_view" description="compile akiraconv">
       <javac includeAntRuntime="true" encoding="UTF-8" srcdir="." deprecation="on" debug="${dbg}" source="1.5" target="1.5">
         <!-- <compilerarg line="-Xlint" /> -->
-        <include name="tools/*.java" />
-        <include name="tools/*/*.java" />
-        <include name="data/*.java" />
-        <include name="plugin/*.java" />
-        <include name="viewer/*.java" />
-        <include name="viewer/**/*.java" />
+        <include name="**/*.java" />
+        <include name="**/**/*.java" />
         <classpath refid="jogl_libpath_ref" />
         <classpath refid="libpath_ref" />
         <classpath refid="ant_libpath_ref" />
-        <!-- <classpath refid="jbullet_libpath_ref" /> -->
       </javac>
     </target>
 
