enable to read bond-file

--- a/converter/AkiraConverter.conf
+++ b/converter/AkiraConverter.conf
@@ -18,6 +18,8 @@ akiratgz:./sio2.tgz:out%03d,0,10,1
 
 ### create bonds?
 false
+### create file?
+false
 ### bond info: tag1, tag2, length[your unit]
 1 2 4
 
