--- a/AkiraConverter.conf
+++ b/AkiraConverter.conf
@@ -28,12 +28,15 @@ akira:./input-samples/ascii:akr%03d,0,0,1
 ### start time, time interval
 0.0 1.0e0
 
-### create bonds?
-true
-### bond file?
+### create bonds with length
 true
 ### bond info: tag1, tag2, length[your unit]
 1 2 1.7
+
+### create bonds with file?
+false
+### bonds file
+bond%03d
 
 ### cut x?, min[0:1], max[0:1]
 false 0.5 0.8
