add: write contour data

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!-- Last Modified <2011-08-29 19:54:14 by NAKAMURA Takahide> -->
+<!-- Last Modified <2011-10-09 09:26:22 by NAKAMURA Takahide> -->
 
   <project name="AKIRA" default="runall" basedir=".">
 
@@ -122,6 +122,7 @@
     <target name="unixview" depends="make_view">
       <java classname="viewer/AkiraViewer" classpath="viewer" fork="yes" maxmemory="1024m"  >
         <classpath refid="jogl_libpath_ref" />
+        <arg line="-enjoy sample.Akira" />
       </java>
     </target>
 
