fix default conv.-conf.

--- a/converter/AkiraConverter.conf
+++ b/converter/AkiraConverter.conf
@@ -11,17 +11,19 @@ sample
 ###    akira, akiratgz, akiratbz2, akirabin, akirabintgz, akirabintbz2,
 ###    chgcar, cube, xyz, coord, xcrysden, chem3d
 
-akiratgz:./sio2.tgz:out%03d,0,10,1
+akiratgz:./trans.tgz:out%03d,0,10,1
 
 ### start time, time interval
 0.0 1.0e0
 
 ### create bonds?
 false
-### create file?
-false
 ### bond info: tag1, tag2, length[your unit]
 1 2 4
+### exist bondfile?
+false
+### bondfile
+bond000
 
 ### cut x?, min[0:1], max[0:1]
 false 0.5 0.8
