add symmetry analyzer

--- a/AkiraConverter.conf
+++ b/AkiraConverter.conf
@@ -18,8 +18,8 @@ sample
 #cube:./input-samples:qm.cube,1,1,1
 #xyz:./input-samples:atoms.xyz,1,1,1
 #akiratgz:./input-samples/sio2.tgz:out%03d,0,1,10
-nkmd:./:nkmd%03d,0,0,1
-#akira:./input-samples/ascii:akr%03d,0,0,1
+#nkmd:./:nkmd%03d,0,0,1
+akira:./input-samples/ascii:akr%03d,0,0,1
 #akiratgz:./input-samples/ascii.tgz:akr%03d,0,1,1
 #akiratbz2:./input-samples/ascii.tbz2:akr%03d,0,1,1
 #akirabin:./input-samples/binary:bakr%03d,0,1,1,little
@@ -30,14 +30,14 @@ nkmd:./:nkmd%03d,0,0,1
 0.0 1.0e0
 
 ### create bonds with length
-true
+false
 ### bond info: tag1, tag2, length[your unit]
 1 2 1.7
 
 ### create bonds with file?
-false
+true
 ### bonds file
-bond%03d
+bond000
 
 ### cut x?, min[0:1], max[0:1]
 false 0.5 0.8
