add xcrysden-tgz reader

--- a/AkiraConverter.conf
+++ b/AkiraConverter.conf
@@ -9,9 +9,10 @@ sample
 #file-format:path:filename,startFrame,endFrame,Increment
 ### file-formats are;
 ###    akira, akiratgz, akiratbz2, akirabin, akirabintgz, akirabintbz2,
-###    chgcar, cube, xyz, coord, xcrysden,
+###    chgcar, cube, xyz, coord, xcrysden, xcrysdentgz, chem3d
 
-#xcrysden:./:out%03d.xsf,0,10,1
+#xcrysdentgz:./input-samples/xsf.tgz:%03d.xsf,1,5,1
+xcrysden:./input-samples:%03d.xsf,1,5,1
 #chgcar:./input-samples/Si_diamond_band:CHGCAR,1,1,1
 #chgcar:./input-samples/SiO2-glass:CHGCAR,1,1,1
 #akira:./input-samples/voronoi/:v%02d,2,2,1
@@ -19,7 +20,7 @@ sample
 #xyz:./input-samples:atoms.xyz,1,1,1
 #akiratgz:./input-samples/sio2.tgz:out%03d,0,1,10
 #nkmd:./:nkmd%03d,0,0,1
-akira:./input-samples/ascii:akr%03d,0,0,1
+#akira:./input-samples/ascii:akr%03d,0,0,1
 #akiratgz:./input-samples/ascii.tgz:akr%03d,0,1,1
 #akiratbz2:./input-samples/ascii.tbz2:akr%03d,0,1,1
 #akirabin:./input-samples/binary:bakr%03d,0,1,1,little
@@ -35,7 +36,7 @@ false
 1 2 1.7
 
 ### create bonds with file?
-true
+false
 ### bonds file
 bond000
 
