--- a/converter/AkiraConverter.conf
+++ b/converter/AkiraConverter.conf
@@ -9,7 +9,7 @@ sample
 #file-format:path:filename,startFrame,endFrame,Increment
 ### file-formats are;
 ###    akira, akiratgz, akiratbz2, akirabin, akirabintgz, akirabintbz2,
-###    chgcar, cube, xyz, coord, xcrysden, chem3d
+###    chgcar, cube, xyz, coord, xcrysden, xcrysdentgz, chem3d
 
 akiratgz:./trans.tgz:out%03d,0,10,1
 
