--- a/AkiraConverter.conf
+++ b/AkiraConverter.conf
@@ -12,8 +12,8 @@ sample
 ###    chgcar, cube, xyz, coord, xcrysden, xcrysdentgz, chem3d
 
 #xcrysdentgz:./input-samples/xsf.tgz:%03d.xsf,1,5,1
-xcrysden:./input-samples:%03d.xsf,1,5,1
-#chgcar:./input-samples/Si_diamond_band:CHGCAR,1,1,1
+#xcrysden:./input-samples:%03d.xsf,1,5,1
+chgcar:./input-samples/Si_diamond_band:CHGCAR,1,1,1
 #chgcar:./input-samples/SiO2-glass:CHGCAR,1,1,1
 #akira:./input-samples/voronoi/:v%02d,2,2,1
 #cube:./input-samples:qm.cube,1,1,1
